Cargando los estilos css

--- a/archivos/html/style.css
+++ b/archivos/html/style.css
@@ -58,3 +58,211 @@ table {
 }
 
 * { box-sizing:border-box;}
+
+/* Layout -----------------------------*/
+
+body { 
+    text-align: center;
+    font: 14px 'Roboto';
+    background: #f5f5f5;
+    }
+
+
+.wrapper { 
+    width: 1024px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.flex {
+    display: flex;
+}
+.content .item {
+    background: #ccc;
+    height: 350px;
+    padding: 20px;
+}
+
+.navbar {
+    margin-left: 10px;
+}
+
+.navbar a {
+    display: inline-block;
+    margin-right: 1px;
+    padding: 15px 15px 5px 15px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #000;
+    text-decoration: none;
+    font-family: 'Roboto Condensed';
+
+}
+
+.navbar a:nth-child(1) {border-bottom: 4px solid #da0033;}
+.navbar a:nth-child(2) {border-bottom: 4px solid #02745b;}
+.navbar a:nth-child(3) {border-bottom: 4px solid #3d0274;}
+.navbar a:nth-child(4) {border-bottom: 4px solid #742502;}
+
+.navbar h1 {
+    font-weight: 500;
+    font-size: 25px;
+    text-align: right;
+}
+
+.navbar span {
+    display: block;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.title {
+    font: 300 60px 'Roboto Condensed';
+    text-transform: uppercase;
+}
+
+.description {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.3;
+}
+
+.description .number {
+    font-weight: 700;
+    font-size: 30px;
+    color: rgba(0,0,0,.3);
+}
+
+.description .subtitle {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.about {
+    color: #fff;
+}
+
+.about .photo {
+    background: #fff;
+}
+
+.about .description {
+    background: #aa042b;
+}
+
+.about .title {
+    background: #da0033;
+}
+
+.creation {
+    color: #333;
+}
+
+.creation .image {
+    background: #fff;
+}
+
+.creation .description {
+    background: #f2f2f2;
+}
+
+.creation .title {
+    background: #02745b;
+    color: #ffff;
+}
+.creation .subtitle {
+    color: #02745b;
+}
+.portfolio .title {
+    background: #3d0274!important;
+    color: #ffffff;
+}
+
+.portfolio .subtitle {
+    color: #3d0274;
+}
+.portfolio li {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.portfolio a {
+    color: #008bda;
+    text-decoration: none;
+}
+
+.contact {
+    color:  #fff;
+}
+
+.contact .title {
+    background: #521900;
+}
+.contact input {
+    border: 0;
+    background: #fff;
+    display: block;
+    width: 200px;
+    height: 30px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+}
+
+.contact [type=submit] {
+    width: auto;
+    height: auto;
+    padding: 5px 15px;
+    border: 2px solid #fff;
+    background: none;
+    color: #fff;
+    font-size: 16px;
+
+}
+
+.contact .description {
+    background: #742502;
+}
+
+.contact .form {
+    background: #742502;
+}
+
+.flex {
+    
+}
+
+.item {
+
+}
+
+@media screen and (max-width: 780px) {
+
+    .flex {
+ 
+    }
+    
+    .item {
+    
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .flex {
+ 
+    }
+    
+    .item {
+    
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .flex {
+ 
+    }
+    
+    .item {
+    
+    }
